src/test/resources/plang-strict/parse-error/004_vardecl_missing_variables.plang
**#Missing variable names
**FirstErrorLoc:5,5
Program vardecl_4
  Változók:
  a := 5;
Program_vége
